REGRESSION(r243149): createMediaElementSource not working https://bugs.webkit.org/show_bug.cgi?id=211394 <rdar://problem/62866132>

Reviewed by Per Arne Vollan.

I removed access to some Audio services in r243149, because we believed they were already
blocked by a global deny command. However, Sandbox rules override generic rules with
explicit rules, so the imported sandbox rules were not being blocked.

This patch re-adds the rules needed to support these audio routines on iOS hardware.

* Resources/SandboxProfiles/ios/com.apple.WebKit.WebContent.sb:
* UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::mediaRelatedMachServices):


Canonical link: https://commits.webkit.org/224955@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261865 268f45cc-cd09-0410-ab3c-d52691b4dbfc